[package]
name = "xchacha8blake3siv"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

[dependencies]
c2-chacha = { git = "https://github.com/PaulGrandperrin/cryptocorrosion.git"} # added 8 and 12 round versions
# chacha20 = {git = "https://github.com/RustCrypto/stream-ciphers.git"} # added 8 and 12 round versions
blake3 = { git = "https://github.com/PaulGrandperrin/BLAKE3.git", branch = "xor_and_crypto_mac_0.10" }
aead = "0.3"
zeroize = "1"
typenum = "1"
crypto-mac = "0.10"
subtle = "2"
cipher = "0.2"

[dev-dependencies]
rand = "0.8"
criterion = { version = '0.3', features=['real_blackbox'] } # nightly only
chacha20poly1305 = "0.7" # to compare against chacha20poly1305
cmac = "0.5"
pmac = "0.5"
ctr = "0.6"
aes-gcm-siv = "0.9"
aes-siv = "0.5"
aes = "0.6"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true # for flamegraph

